# general-user-model-experiment

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml  setup.py
app/: streamlit_app.py
docs/: API.md  ARCHITECTURE.md
examples/: sample_events.csv
paper/: SOURCE_DERIVATION.md
scripts/: generate_example_csv.py  train_demo.py
src/general_user_model_experiment/: __init__.py  api.py  dataio.py  evaluation.py  features.py  model.py  propositions.py  schemas.py  simulation.py  suggestions.py
tests/: test_api.py  test_dataio.py  test_model.py  test_propositions.py
