[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "general-user-model-experiment"
version = "0.1.0"
description = "Open-source general user model from computer-use telemetry"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ethan + OpenClaw collaborators" }
]
keywords = ["user-model", "behavior-modeling", "computer-use", "telemetry", "open-source"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  "streamlit>=1.34",
  "plotly>=5.20"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
